tests/codegen-anf/pass/023-for-loop-sum.hyg
let mutable sum = 0;
let mutable i = 0;
for (i <- 0; i < 10; i++) {
    sum += i
};
assert (sum = 45)
